@@ -26,8 +26,13 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
-          sudo apt-get install -y libharfbuzz-dev
-          zef install .
+          ## Requires Debian 11+
+          ##sudo apt-get install -y libharfbuzz-dev
+          wget https://github.com/harfbuzz/harfbuzz/archive/2.7.4.tar.gz
+          (tar xvzf 2.7.4.tar.gz && cd harfbuzz-2.7.4 && ./autogen.sh && make)
           zef install --/test App::Prove6
       - name: Run Tests
-        run: prove6 -l t
+        run: |
+          export LD_LIBRARY_PATH=harfbuzz-2.7.4/src/.libs
+          prove6 -l t
+          zef install .
